consolidated all of composites into features

--- a/Application/EdFi.Ods.WebService.Tests/App.config
+++ b/Application/EdFi.Ods.WebService.Tests/App.config
@@ -49,7 +49,7 @@
       <level value="OFF" />
     </logger>
     <!-- Add logger that supports HQL approval tests -->
-    <logger name="EdFi.Ods.Api.Common">
+    <logger name="EdFi.Ods.Features">
       <level value="DEBUG" />
       <appender-ref ref="MemoryAppender" />
     </logger>
