--- a/Utilities/GenerateSecurityGraphs/GenerateSecurityGraphs/GenerateSecurityGraphs.csproj
+++ b/Utilities/GenerateSecurityGraphs/GenerateSecurityGraphs/GenerateSecurityGraphs.csproj
@@ -16,4 +16,9 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="$(ProjectDir)Assets\**"
+          CopyToOutputDirectory="PreserveNewest"
+          LinkBase="Assets\" />
+  </ItemGroup>
 </Project>
